[*] 用户数据放在data文件夹下 [*] 去除hardcode域名

--- a/views/modify-article.ejs
+++ b/views/modify-article.ejs
@@ -6,6 +6,9 @@
                 <p>title<input type="text" id="title" name="title" value="<%=params.title%>"/></p>
                 <p>content<input type="text" id="content" name="content" value="<%=params.content%>"/></p>
             </div>
+            <!--把图片加上吧-->
+            <!--img-->
+            <!--input:file-->
             <button name="<%=params.id%>">PUT</button>
         </div>
     </body>
