--- a/views/show-article.ejs
+++ b/views/show-article.ejs
@@ -2,12 +2,10 @@
     <head></head>
     <body>
         <div id="content">
-            <%if(Object.keys(params).length != 0){%>
-                <p>content:<%=params.content%></p>
-                <p>title:<%=params.title%></p>
-                <%if(params.file){%>
-                    <img src="<%=params.file%>"/>
-                <%}%>
+            <p>content:<%=article_params.content%></p>
+            <p>title:<%=article_params.title%></p>
+            <%if(article_params.file){%>
+                <img src="<%=article_params.file%>"/>
             <%}%>
         </div>
     </body>
