--- a/views/new-article.ejs
+++ b/views/new-article.ejs
@@ -5,7 +5,7 @@
             <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
                 <p>title<input type="text" id="title" name="title" value=""/></p>
                 <p>content<input type="text" id="content" name="content" value=""/></p>
-                <p>image<input type="file" id="image" name="image" value="" /></p>
+                <p>poster<input type="file" id="poster" name="poster" value="" /></p>
                 <input type="submit" value="Submit"/> 
             </form>
         </div>
