--- a/views/show-article.ejs
+++ b/views/show-article.ejs
@@ -4,8 +4,8 @@
         <div id="content">
             <p>content:<%=article_params.content%></p>
             <p>title:<%=article_params.title%></p>
-            <%if(article_params.file){%>
-                <img src="<%=article_params.file%>"/>
+            <%if(article_params.poster){%>
+                <img src="<%=article_params.poster%>"/>
             <%}%>
         </div>
     </body>
