--- a/views/show-article.ejs
+++ b/views/show-article.ejs
@@ -5,7 +5,7 @@
             <p>content:<%=article_params.content%></p>
             <p>title:<%=article_params.title%></p>
             <%if(article_params.poster){%>
-                <img src="<%=article_params.poster%>"/>
+                <img src="/images/<%=article_params.poster%>"/>
             <%}%>
         </div>
     </body>
