--- a/views/new-article.ejs
+++ b/views/new-article.ejs
@@ -2,12 +2,22 @@
     <head></head>
     <body>
         <div>
-            <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
-                <p>title<input type="text" id="title" name="title" value=""/></p>
-                <p>content<input type="text" id="content" name="content" value=""/></p>
-                <p>poster<input type="file" id="poster" name="poster" value="" /></p>
-                <input type="submit" value="Submit"/> 
-            </form>
+            <%if(article){%>
+                <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
+                    <p>title<input type="text" id="title" name="title" value="<%=article.title%>"/></p>
+                    <p>content<input type="text" id="content" name="content" value="<%=article.content%>"/></p>
+                    <p>poster<input type="file" id="poster" name="poster" value="<%=article.poster%>" /></p>
+                    <p style="color:red"><%=article.err%></p>
+                    <input type="submit" value="Submit"/> 
+                </form>
+            <%}else{%>
+                <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
+                    <p>title<input type="text" id="title" name="title" value=""/></p>
+                    <p>content<input type="text" id="content" name="content" value=""/></p>
+                    <p>poster<input type="file" id="poster" name="poster" value="" /></p>
+                    <input type="submit" value="Submit"/> 
+                </form>
+            <%}%>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
