--- a/views/new-article.ejs
+++ b/views/new-article.ejs
@@ -3,7 +3,7 @@
     <body>
         <div>
             <%if(article){%>
-                <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
+                <form action="/articles" method="POST" enctype="multipart/form-data">
                     <p>title<input type="text" id="title" name="title" value="<%=article.title%>"/></p>
                     <p>content<input type="text" id="content" name="content" value="<%=article.content%>"/></p>
                     <p>poster<input type="file" id="poster" name="poster" value="<%=article.poster%>" /></p>
@@ -11,7 +11,7 @@
                     <input type="submit" value="Submit"/> 
                 </form>
             <%}else{%>
-                <form action="http://127.0.0.1:3000/articles" method="POST" enctype="multipart/form-data">
+                <form action="/articles" method="POST" enctype="multipart/form-data">
                     <p>title<input type="text" id="title" name="title" value=""/></p>
                     <p>content<input type="text" id="content" name="content" value=""/></p>
                     <p>poster<input type="file" id="poster" name="poster" value="" /></p>
