--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <form action="/users/join" method="POST" enctype="application/x-www-form-urlencoded">
+    <form action="/users" method="POST" enctype="application/x-www-form-urlencoded">
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
@@ -28,7 +28,7 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">login</button>
     </form>
 
     <!-- Optional JavaScript -->
