--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,6 +28,9 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
+        <%if(err){%>
+            <p style="color:red"><%=err%></p>
+        <%}%>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
